tomcat/tomcat-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ashamchonak
  labels:
    name: ashamchonak
