tomcat/tomcat-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: ashamchonak
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ashamchonak.k8s.playpit.by
    secretName: letsencrypt-prod
  rules:
  - host: ashamchonak.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-service
          servicePort: tomcatsvcport
