tomcat/tomcat-s-i.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: STUDENT_NAME
spec:
  selector:
    app: tomcat-app
  type: ClusterIP
  ports:
  - name: tomcatsvcport
    port: 8080
    targetPort: tomcatport
    
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: STUDENT_NAME
  annotations:
    ingress.kubernetes.io/rewrite-target: /helloworld-ws/
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - STUDENT_NAME-app.k8s.playpit.by
    secretName: letsencrypt-prod
  rules:
  - host: STUDENT_NAME-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-service
          servicePort: tomcatsvcport
